//package com.sincetimes.redwar.game.comnunicate.protocol;


message RseBattleDamagesPack
{
    optional int32 ret = 1;
}

